gen/KotlinParser.py
# Generated from grammars/KotlinParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KotlinParser ( Parser ):

    grammarFileName = "KotlinParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'interface'", "'object'", 
                     "'data'", "'enum'", "'fun'", "'val'", "'var'", "'init'", 
                     "'constructor'", "'return'", "'if'", "'else'", "'when'", 
                     "'for'", "'while'", "'try'", "'catch'", "'finally'", 
                     "'throw'", "'import'", "'package'", "'in'", "'public'", 
                     "'private'", "'protected'", "'internal'", "'open'", 
                     "'abstract'", "'final'", "'override'", "'static'", 
                     "'companion'", "'String'", "'Int'", "'Long'", "'Double'", 
                     "'Float'", "'Boolean'", "'Char'", "'Unit'", "'Any'", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", "'!'", 
                     "';'", "','", "'.'", "':'", "'?'", "'->'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'null'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "INTERFACE", "OBJECT", "DATA", 
                      "ENUM", "FUN", "VAL", "VAR", "INIT", "CONSTRUCTOR", 
                      "RETURN", "IF", "ELSE", "WHEN", "FOR", "WHILE", "TRY", 
                      "CATCH", "FINALLY", "THROW", "IMPORT", "PACKAGE", 
                      "IN", "PUBLIC", "PRIVATE", "PROTECTED", "INTERNAL", 
                      "OPEN", "ABSTRACT", "FINAL", "OVERRIDE", "STATIC", 
                      "COMPANION", "STRING_TYPE", "INT_TYPE", "LONG_TYPE", 
                      "DOUBLE_TYPE", "FLOAT_TYPE", "BOOLEAN_TYPE", "CHAR_TYPE", 
                      "UNIT_TYPE", "ANY_TYPE", "ASSIGN", "PLUS", "MINUS", 
                      "MULTIPLY", "DIVIDE", "MODULO", "EQUALS", "NOT_EQUALS", 
                      "LESS_THAN", "GREATER_THAN", "LESS_EQUAL", "GREATER_EQUAL", 
                      "LOGICAL_AND", "LOGICAL_OR", "LOGICAL_NOT", "SEMICOLON", 
                      "COMMA", "DOT", "COLON", "QUESTION", "ARROW", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
                      "STRING_LITERAL", "CHAR_LITERAL", "INTEGER_LITERAL", 
                      "LONG_LITERAL", "FLOAT_LITERAL", "DOUBLE_LITERAL", 
                      "BOOLEAN_LITERAL", "NULL_LITERAL", "IDENTIFIER", "WS", 
                      "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_kotlinFile = 0
    RULE_packageHeader = 1
    RULE_importList = 2
    RULE_topLevelObject = 3
    RULE_classDeclaration = 4
    RULE_primaryConstructor = 5
    RULE_primaryConstructorParameterList = 6
    RULE_primaryConstructorParameter = 7
    RULE_interfaceDeclaration = 8
    RULE_objectDeclaration = 9
    RULE_enumDeclaration = 10
    RULE_modifiers = 11
    RULE_modifier = 12
    RULE_parameterList = 13
    RULE_parameter = 14
    RULE_superTypes = 15
    RULE_superType = 16
    RULE_typeParameters = 17
    RULE_typeParameter = 18
    RULE_typeArguments = 19
    RULE_type_ = 20
    RULE_classBody = 21
    RULE_interfaceBody = 22
    RULE_enumBody = 23
    RULE_classMemberDeclarations = 24
    RULE_classMemberDeclaration = 25
    RULE_interfaceMemberDeclarations = 26
    RULE_interfaceMemberDeclaration = 27
    RULE_secondaryConstructor = 28
    RULE_initBlock = 29
    RULE_constructorDelegationCall = 30
    RULE_enumEntries = 31
    RULE_enumEntry = 32
    RULE_functionDeclaration = 33
    RULE_propertyDeclaration = 34
    RULE_propertyDelegate = 35
    RULE_getter = 36
    RULE_setter = 37
    RULE_block = 38
    RULE_statements = 39
    RULE_statement = 40
    RULE_ifStatement = 41
    RULE_whileStatement = 42
    RULE_forStatement = 43
    RULE_returnStatement = 44
    RULE_declaration = 45
    RULE_argumentList = 46
    RULE_expression = 47
    RULE_logicalOrExpression = 48
    RULE_logicalAndExpression = 49
    RULE_equalityExpression = 50
    RULE_relationalExpression = 51
    RULE_additiveExpression = 52
    RULE_multiplicativeExpression = 53
    RULE_unaryExpression = 54
    RULE_primaryExpression = 55
    RULE_functionCall = 56
    RULE_literal = 57

    ruleNames =  [ "kotlinFile", "packageHeader", "importList", "topLevelObject", 
                   "classDeclaration", "primaryConstructor", "primaryConstructorParameterList", 
                   "primaryConstructorParameter", "interfaceDeclaration", 
                   "objectDeclaration", "enumDeclaration", "modifiers", 
                   "modifier", "parameterList", "parameter", "superTypes", 
                   "superType", "typeParameters", "typeParameter", "typeArguments", 
                   "type_", "classBody", "interfaceBody", "enumBody", "classMemberDeclarations", 
                   "classMemberDeclaration", "interfaceMemberDeclarations", 
                   "interfaceMemberDeclaration", "secondaryConstructor", 
                   "initBlock", "constructorDelegationCall", "enumEntries", 
                   "enumEntry", "functionDeclaration", "propertyDeclaration", 
                   "propertyDelegate", "getter", "setter", "block", "statements", 
                   "statement", "ifStatement", "whileStatement", "forStatement", 
                   "returnStatement", "declaration", "argumentList", "expression", 
                   "logicalOrExpression", "logicalAndExpression", "equalityExpression", 
                   "relationalExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "primaryExpression", "functionCall", 
                   "literal" ]

    EOF = Token.EOF
    CLASS=1
    INTERFACE=2
    OBJECT=3
    DATA=4
    ENUM=5
    FUN=6
    VAL=7
    VAR=8
    INIT=9
    CONSTRUCTOR=10
    RETURN=11
    IF=12
    ELSE=13
    WHEN=14
    FOR=15
    WHILE=16
    TRY=17
    CATCH=18
    FINALLY=19
    THROW=20
    IMPORT=21
    PACKAGE=22
    IN=23
    PUBLIC=24
    PRIVATE=25
    PROTECTED=26
    INTERNAL=27
    OPEN=28
    ABSTRACT=29
    FINAL=30
    OVERRIDE=31
    STATIC=32
    COMPANION=33
    STRING_TYPE=34
    INT_TYPE=35
    LONG_TYPE=36
    DOUBLE_TYPE=37
    FLOAT_TYPE=38
    BOOLEAN_TYPE=39
    CHAR_TYPE=40
    UNIT_TYPE=41
    ANY_TYPE=42
    ASSIGN=43
    PLUS=44
    MINUS=45
    MULTIPLY=46
    DIVIDE=47
    MODULO=48
    EQUALS=49
    NOT_EQUALS=50
    LESS_THAN=51
    GREATER_THAN=52
    LESS_EQUAL=53
    GREATER_EQUAL=54
    LOGICAL_AND=55
    LOGICAL_OR=56
    LOGICAL_NOT=57
    SEMICOLON=58
    COMMA=59
    DOT=60
    COLON=61
    QUESTION=62
    ARROW=63
    LPAREN=64
    RPAREN=65
    LBRACE=66
    RBRACE=67
    LBRACKET=68
    RBRACKET=69
    STRING_LITERAL=70
    CHAR_LITERAL=71
    INTEGER_LITERAL=72
    LONG_LITERAL=73
    FLOAT_LITERAL=74
    DOUBLE_LITERAL=75
    BOOLEAN_LITERAL=76
    NULL_LITERAL=77
    IDENTIFIER=78
    WS=79
    LINE_COMMENT=80
    BLOCK_COMMENT=81

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class KotlinFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(KotlinParser.EOF, 0)

        def packageHeader(self):
            return self.getTypedRuleContext(KotlinParser.PackageHeaderContext,0)


        def importList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KotlinParser.ImportListContext)
            else:
                return self.getTypedRuleContext(KotlinParser.ImportListContext,i)


        def topLevelObject(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KotlinParser.TopLevelObjectContext)
            else:
                return self.getTypedRuleContext(KotlinParser.TopLevelObjectContext,i)


        def getRuleIndex(self):
            return KotlinParser.RULE_kotlinFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKotlinFile" ):
                listener.enterKotlinFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKotlinFile" ):
                listener.exitKotlinFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKotlinFile" ):
                return visitor.visitKotlinFile(self)
            else:
                return visitor.visitChildren(self)




    def kotlinFile(self):

        localctx = KotlinParser.KotlinFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_kotlinFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 116
                self.packageHeader()


            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 119
                self.importList()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 12868125182) != 0) or _la==78:
                self.state = 125
                self.topLevelObject()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(KotlinParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(KotlinParser.PACKAGE, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(KotlinParser.IDENTIFIER)
            else:
                return self.getToken(KotlinParser.IDENTIFIER, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(KotlinParser.DOT)
            else:
                return self.getToken(KotlinParser.DOT, i)

        def getRuleIndex(self):
            return KotlinParser.RULE_packageHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageHeader" ):
                listener.enterPackageHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageHeader" ):
                listener.exitPackageHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageHeader" ):
                return visitor.visitPackageHeader(self)
            else:
                return visitor.visitChildren(self)




    def packageHeader(self):

        localctx = KotlinParser.PackageHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageHeader)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(KotlinParser.PACKAGE)
            self.state = 134
            self.match(KotlinParser.IDENTIFIER)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==60:
                self.state = 135
                self.match(KotlinParser.DOT)
                self.state = 136
                self.match(KotlinParser.IDENTIFIER)
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(KotlinParser.IMPORT, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(KotlinParser.IDENTIFIER)
            else:
                return self.getToken(KotlinParser.IDENTIFIER, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(KotlinParser.DOT)
            else:
                return self.getToken(KotlinParser.DOT, i)

        def MULTIPLY(self):
            return self.getToken(KotlinParser.MULTIPLY, 0)

        def getRuleIndex(self):
            return KotlinParser.RULE_importList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportList" ):
                listener.enterImportList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportList" ):
                listener.exitImportList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportList" ):
                return visitor.visitImportList(self)
            else:
                return visitor.visitChildren(self)




    def importList(self):

        localctx = KotlinParser.ImportListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(KotlinParser.IMPORT)
            self.state = 143
            self.match(KotlinParser.IDENTIFIER)
            self.state = 148
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 144
                    self.match(KotlinParser.DOT)
                    self.state = 145
                    self.match(KotlinParser.IDENTIFIER) 
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==60:
                self.state = 151
                self.match(KotlinParser.DOT)
                self.state = 152
                self.match(KotlinParser.MULTIPLY)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self):
            return self.getTypedRuleContext(KotlinParser.ClassDeclarationContext,0)


        def interfaceDeclaration(self):
            return self.getTypedRuleContext(KotlinParser.InterfaceDeclarationContext,0)


        def objectDeclaration(self):
            return self.getTypedRuleContext(KotlinParser.ObjectDeclarationContext,0)


        def enumDeclaration(self):
            return self.getTypedRuleContext(KotlinParser.EnumDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(KotlinParser.FunctionDeclarationContext,0)


        def propertyDeclaration(self):
            return self.getTypedRuleContext(KotlinParser.PropertyDeclarationContext,0)


        def getRuleIndex(self):
            return KotlinParser.RULE_topLevelObject

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelObject" ):
                listener.enterTopLevelObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelObject" ):
                listener.exitTopLevelObject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelObject" ):
                return visitor.visitTopLevelObject(self)
            else:
                return visitor.visitChildren(self)




    def topLevelObject(self):

        localctx = KotlinParser.TopLevelObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_topLevelObject)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.classDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.interfaceDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.objectDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 158
                self.enumDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 159
                self.functionDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 160
                self.propertyDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(KotlinParser.CLASS, 0)

        def IDENTIFIER(self):
            return self.getToken(KotlinParser.IDENTIFIER, 0)

        def modifiers(self):
            return self.getTypedRuleContext(KotlinParser.ModifiersContext,0)


        def DATA(self):
            return self.getToken(KotlinParser.DATA, 0)

        def typeParameters(self):
            return self.getTypedRuleContext(KotlinParser.TypeParametersContext,0)


        def primaryConstructor(self):
            return self.getTypedRuleContext(KotlinParser.PrimaryConstructorContext,0)


        def COLON(self):
            return self.getToken(KotlinParser.COLON, 0)

        def superTypes(self):
            return self.getTypedRuleContext(KotlinParser.SuperTypesContext,0)


        def classBody(self):
            return self.getTypedRuleContext(KotlinParser.ClassBodyContext,0)


        def getRuleIndex(self):
            return KotlinParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = KotlinParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 12868124672) != 0):
                self.state = 163
                self.modifiers()


            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 166
                self.match(KotlinParser.DATA)


            self.state = 169
            self.match(KotlinParser.CLASS)
            self.state = 170
            self.match(KotlinParser.IDENTIFIER)
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==51:
                self.state = 171
                self.typeParameters()


            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 174
                self.primaryConstructor()


            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==61:
                self.state = 177
                self.match(KotlinParser.COLON)
                self.state = 178
                self.superTypes()


            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==66:
                self.state = 181
                self.classBody()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryConstructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(KotlinParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(KotlinParser.RPAREN, 0)

        def modifiers(self):
            return self.getTypedRuleContext(KotlinParser.ModifiersContext,0)


        def CONSTRUCTOR(self):
            return self.getToken(KotlinParser.CONSTRUCTOR, 0)

        def primaryConstructorParameterList(self):
            return self.getTypedRuleContext(KotlinParser.PrimaryConstructorParameterListContext,0)


        def getRuleIndex(self):
            return KotlinParser.RULE_primaryConstructor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryConstructor" ):
                listener.enterPrimaryConstructor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryConstructor" ):
                listener.exitPrimaryConstructor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryConstructor" ):
                return visitor.visitPrimaryConstructor(self)
            else:
                return visitor.visitChildren(self)




    def primaryConstructor(self):

        localctx = KotlinParser.PrimaryConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_primaryConstructor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 12868124672) != 0):
                self.state = 184
                self.modifiers()


            self.state = 188
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 187
                self.match(KotlinParser.CONSTRUCTOR)


            self.state = 190
            self.match(KotlinParser.LPAREN)
            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 12868125056) != 0) or _la==78:
                self.state = 191
                self.primaryConstructorParameterList()


            self.state = 194
            self.match(KotlinParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryConstructorParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryConstructorParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KotlinParser.PrimaryConstructorParameterContext)
            else:
                return self.getTypedRuleContext(KotlinParser.PrimaryConstructorParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(KotlinParser.COMMA)
            else:
                return self.getToken(KotlinParser.COMMA, i)

        def getRuleIndex(self):
            return KotlinParser.RULE_primaryConstructorParameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryConstructorParameterList" ):
                listener.enterPrimaryConstructorParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryConstructorParameterList" ):
                listener.exitPrimaryConstructorParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryConstructorParameterList" ):
                return visitor.visitPrimaryConstructorParameterList(self)
            else:
                return visitor.visitChildren(self)




    def primaryConstructorParameterList(self):

        localctx = KotlinParser.PrimaryConstructorParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_primaryConstructorParameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.primaryConstructorParameter()
            self.state = 201
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==59:
                self.state = 197
                self.match(KotlinParser.COMMA)
                self.state = 198
                self.primaryConstructorParameter()
                self.state = 203
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryConstructorParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(KotlinParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(KotlinParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(KotlinParser.Type_Context,0)


        def modifiers(self):
            return self.getTypedRuleContext(KotlinParser.ModifiersContext,0)


        def ASSIGN(self):
            return self.getToken(KotlinParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(KotlinParser.ExpressionContext,0)


        def VAL(self):
            return self.getToken(KotlinParser.VAL, 0)

        def VAR(self):
            return self.getToken(KotlinParser.VAR, 0)

        def getRuleIndex(self):
            return KotlinParser.RULE_primaryConstructorParameter

